<resources>
    <string name="app_name">Air Quality</string>
    <string name="activity_locations">City locations</string>
    <string name="activity_location_detail">Location details</string>

    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Logged user: %s</string>

    <string name="strError">No cities recovered</string>
    <string name="btnFindAllCities">Update Cities</string>
    <string name="btnUploadCloud">Upload to cloud</string>

    <!-- City List -->
    <string name="txtCityListPosition">#</string>
    <string name="txtCityListCityName">City Name</string>

    <!-- Locations List -->
    <string name="txtLocationPosition">#</string>
    <string name="txtLocationCode">Code</string>
    <string name="txtLocationAddress">Address</string>
    <string name="txtLocationLatitude">Latitude</string>
    <string name="txtLocationLongitude">Longitude</string>

    <!-- Location Details -->
    <string name="txtLocationDetailsPosition">#</string>
    <string name="txtLocationDetailsParameter">Param</string>
    <string name="txtLocationDetailsValue">Value</string>
    <string name="txtLocationDetailsUnits">Units</string>
    <string name="txtLocationDetailsLastUpdate">Last Update</string>
    <string name="txtLocationDetailsAQI">AQI</string>

</resources>
