<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/searchRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etUpdateCities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:text="@string/btnFindAllCities"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:contentDescription="@string/btnFindAllCities"
            android:onClick="getAllCities"
            android:src="@mipmap/map"
            android:text="@string/btnFindAllCities" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvCityList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="7" />

    <RelativeLayout
        android:id="@+id/userLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibUploadToCloudAllCities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:enabled="true"
            android:gravity="center_vertical"
            android:src="@mipmap/cloud" />

        <TextView
            android:id="@+id/etUploadCloud"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/ibUploadToCloudAllCities"
            android:gravity="center_vertical"
            android:text="@string/btnUploadCloud" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/logout_button" />

        <TextView
            android:id="@+id/tvLoggedUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogout"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical" />

    </RelativeLayout>

</LinearLayout>









